# overland-lambda

./: LICENSE.md  README.md  package.json
collector-server/: .gitignore  handler.ts  package.json  serverless.yml.TEMPLATE
overland-lambda-rollup/: .gitignore  pyproject.toml
overland-lambda-rollup/overland_lambda_rollup/: dlsToCsvs.py  dlsToObjs.py  jsonToObj.py  main.py
overland-lambda-rollup/tests/: test_overland_lambda_rollup.py
rollup/: .gitignore  map.geojson  map_config.py  nb.ipynb  requirements.txt
viz-everyday/: package.json  tailwind.config.js
viz-everyday-old/: craco.config.js  package.json
viz-everyday-old/public/: out.arrow
viz-everyday-old/src/: App.js  Preproc.js  range-input.js
viz-everyday/src/: App.js  Map.js
