[tool.poetry]
name = "overland-lambda-rollup"
version = "0.1.0"
description = ""
authors = ["Noah Crocker <vertigoetrex@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
tqdm = "^4.60.0"
pyarrow = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "overland_lambda_rollup.main:main"
