[tool.poetry]
name = "overland-lambda-rollup"
version = "0.1.0"
description = ""
authors = ["Noah Crocker <vertigoetrex@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
tqdm = "^4.60.0"
pyarrow = "^3.0.0"
click = "^8.0.1"
filetype = "^1.0.7"
rich = "^10.4.0"
ffmpeg-python = "^0.2.0"
Pillow = "^8.3.0"
pyheif-pillow-opener = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
handle_media = "overland_lambda_rollup.main:handle_media"
location_data_to_arrow = "overland_lambda_rollup.main:location_data_to_arrow"
